--- a/src/com/qlsv/view/ManageSV.form
+++ b/src/com/qlsv/view/ManageSV.form
@@ -48,7 +48,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="jScrollPane1" min="-2" pref="1200" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" pref="209" max="-2" attributes="0"/>
+                      <Component id="XemBangDiemjButton" min="-2" pref="209" max="-2" attributes="0"/>
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="IDjTextField" min="-2" pref="60" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
@@ -91,7 +91,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
-                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                  <Component id="XemBangDiemjButton" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="ChuongTrinhjTextField" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
@@ -235,7 +235,7 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="XemBangDiemjButton">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Arial" size="12" style="0"/>
@@ -245,6 +245,9 @@
               <Connection code="new TextBubbleBorder(Color.MAGENTA.darker(), 1, 5, 0)" type="code"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="XemBangDiemjButtonMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="IDjTextField">
           <Properties>
